# sqlfluff-lsp

./: .gitignore  Cargo.toml  README.md  pixi.toml
.github/workflows/: ci.yaml
src/: lsp.rs  main.rs  sqlfluff.rs
