[package]
name = "sqlfluff-lsp"
version = "0.1.0"
edition = "2024"
authors = ["VasanthakumarV <vasanth260m12@gmail.com>"]
description = "Language Server for the SQL linting & formatting tool, SQLFluff."
license = "MIT OR Apache-2.0"
keywords = ["language-server", "lsp", "sql"]
categories = ["development-tools"]
exclude = [".github/"]
repository = "https://github.com/VasanthakumarV/sqlfluff-lsp"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-lsp-server = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
tempfile = "3.23.0"
